<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_driver_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#12478e"
    tools:context=".home.DriverHomeActivity">


    <RelativeLayout
        android:id="@+id/container_form_driver_home"
        android:layout_width="347dp"
        android:layout_height="469dp"
        android:layout_centerInParent="true"
        android:background="@android:color/background_light"
        android:padding="22dp"
        android:paddingTop="22dp">

        <TextView
            android:id="@+id/textViewDriverHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="35dp"
            android:text="@string/driver_text"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/beginDriverId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_begin" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="135dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/goalDriverId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_goal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="185dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dateDriverId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_date" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="135dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/timeDriverId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_horary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="93dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/numberPlaceDriverId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_number_places" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="53dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/valueDriverId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/value_driver_text" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/saveDriverConfigId"
            android:layout_width="226dp"
            android:layout_height="38dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="39dp"
            android:background="#2da4f4"
            android:text="@string/save_change"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="16sp" />

    </RelativeLayout>
</RelativeLayout>