<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_passenger_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#12478e"
    tools:context=".home.PassengerHomeActivity">


    <RelativeLayout
        android:id="@+id/container_form_passenger_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="22dp"
        android:background="@android:color/background_light">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:text="@string/passenger_text"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="114dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/beginPassengerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_begin" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="167dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/datePassengerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_date" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="178dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/goalPassengerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_goal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="108dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/timePassengerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_horary" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/savePassengerConfigId"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="31dp"
            android:background="#2da4f4"
            android:text="@string/save_change"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="16sp" />
    </RelativeLayout>
</RelativeLayout>