<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#12478e"
    tools:context=".auth.LoginActivity">


    <RelativeLayout
        android:id="@+id/container_form_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="22dp"
        android:background="@android:color/background_light">

        <ImageView
            android:id="@+id/imageLogoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            app:srcCompat="@drawable/logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="151dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/userLoginId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_login" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="207dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/userPasswordLoginId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonLoginId"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="146dp"
            android:background="#2da4f4"
            android:text="@string/text_button_login"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonForgotPassLoginId"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="88dp"
            android:background="@null"
            android:text="@string/text_forgot_password"
            android:textAllCaps="false"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonRegisterLoginId"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="28dp"
            android:background="#2da4f4"
            android:text="@string/button_register_text"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="16sp" />
    </RelativeLayout>
</RelativeLayout>